k8s/infrastructure/openbao/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openboa-ui
spec:
  selector:
    app: openboa-ui
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
  type: ClusterIP
