k8s/infrastructure/openbao/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ui
  annotations:
    #  cert-manager.io/cluster-issuer: letsencrypt-prod
    #  traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: kms.${BURGINFRA_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao-ui
                port:
                  number: 8200
  tls:
    - hosts:
        - kms.${BURGINFRA_HOST}
